looks better on mobile, would still like to fix snap scrolling on mobile

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,6 +1,7 @@
 .home {
   position: relative;
-  height: 100vh;
+  min-height: 100vh;
+  height: auto;
   background-size: 400% 400%;
   color: white;
   display: flex;
