--- a/src/index.css
+++ b/src/index.css
@@ -21,13 +21,13 @@ a {
 a:hover {
   color: #535bf2;
 }
-
+html,
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
+  height: auto;
   min-height: 100vh;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
 }
 
 h1 {
